<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  tools:context=".CheckInActivity">

  <Button
    android:id="@+id/check_in"
    android:layout_height="wrap_content"
    android:layout_width="@dimen/photo_width"
    android:layout_centerHorizontal="true"
    android:layout_alignParentBottom="true"
    android:text="@string/check_in_btn"/>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/check_in"
    android:scrollbars="none">

    <LinearLayout
      android:layout_height="wrap_content"
      android:layout_width="@dimen/photo_width"
      android:layout_gravity="center_horizontal"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/check_in_text"
        android:textColor="#808080"
        android:textSize="18sp"/>

      <RelativeLayout
        android:id="@+id/photo_frame"
        android:layout_height="@dimen/photo_width"
        android:layout_width="@dimen/photo_width"
        android:clickable="true">

        <ImageView
          android:id="@+id/photo"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:scaleType="fitCenter"
          android:src="@drawable/hipster_user"/>

        <TextView
          android:id="@+id/take_photo_label"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_alignParentBottom="true"
          android:gravity="center"
          android:text="@string/take_photo_label"
          android:textColor="#1885F0"
          android:textSize="18sp"/>

        <ImageView
          android:id="@+id/retake"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentRight="true"
          android:scaleType="center"
          android:src="@drawable/ic_camera_dark"
          android:visibility="gone"/>

      </RelativeLayout>

      <EditText
        android:id="@+id/name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:capitalize="words"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textSize="18sp"
        android:hint="@string/name_edittext_hint"/>
    </LinearLayout>
  </ScrollView>

  <ProgressBar
    android:id="@android:id/progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    style="?android:attr/progressBarStyle"
    android:visibility="gone"/>
</RelativeLayout>